<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memory_title_label"/>

        <Switch
            android:id="@+id/favorite_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:checked="false"
            android:text="@string/memory_favorite_label"/>
    </LinearLayout>


    <EditText
        android:id="@+id/memory_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/memory_title_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/memory_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"/>
            <ImageButton
                android:id="@+id/memory_camera"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                android:contentDescription="Take photo of memory" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/memory_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Today's Date" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_description_label"/>

    <EditText
        android:id="@+id/memory_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/memory_description_hint" />
</LinearLayout>